2015-04-24  carl  <cth@carlh.net>

	* Fix some flickering in the film editor when dragging
	things in the timeline on OS X.

2015-04-22  c.hetherington  <cth@carlh.net>

	* Add tentative P3 colour conversion preset.

2015-04-22  Carl Hetherington  <cth@carlh.net>

	* Use ~/Library/Preferences to store preferences on OS X,
	and don't give a fatal error if saving configuration fails
	(#509).

2015-04-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.6 released.

2015-04-20  Carl Hetherington  <cth@carlh.net>

	* Use a single binary file for keeping frame information
	rather than a file per frame (#444).

	* Remove the encoded frames count in properties, which
	I think is of dubious value.

2015-04-18  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.5 released.

2015-04-18  Carl Hetherington  <cth@carlh.net>

	* Attempt to fix confusion with the JPEG2000 bandwidth
	control when a user enters a value directly rather than
	using the spin arrows.

2015-04-17  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.4 released.

2015-04-16  Carl Hetherington  <cth@carlh.net>

	* Fix potential OS X crashes due to another incarnation
	of the bizarre multi-thread stringstream bug.

2015-04-15  c.hetherington  <cth@carlh.net>

	* Sort filenames when they are imported with "add files" or
	drag-and-drop.

	* Fix incorrect import of files with drag-and-drop.

2015-04-14  Carl Hetherington  <cth@carlh.net>

	* Allow adjustment of white point using a Bradford matrix.

2015-04-13  Carl Hetherington  <cth@carlh.net>

	* Define colour conversions using red/green/blue chromaticities
	and white point rather than a matrix.

2015-04-13  c.hetherington  <cth@carlh.net>

	* Add menu option to reset default preferences.

2015-04-13  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.3 released.

2015-04-13  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.2 released.

2015-04-13  Carl Hetherington  <cth@carlh.net>

	* Make the matrix used to convert from YUV to RGB configurable, so